[project]
name = "dydim"
version = "0.1.0"
description = "DyDim: dynamic dimension evaluation with attention-sum semantic vectors."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "mteb",
    "numpy",
    "pandas",
    "pyyaml",
    "scipy",
    "torch",
    "tqdm",
    "transformers",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dydim"]

